--- a/config.yaml
+++ b/config.yaml
@@ -18,3 +18,6 @@ MOTIF_TSV: "/data/gpfs/assoc/inbre/projects/misty_riddle/rnaseq_2018/sequence_de
 
 # Final output matrix filename
 OUTPUT_MATRIX: "motif_analysis_matrix.tsv"
+
+# Final output HTML filename
+OUTPUT_MATRIX: "motif_analysis.html"
